--- a/Proyecto/src/main/resources/templates/layout/Plantilla.html
+++ b/Proyecto/src/main/resources/templates/layout/Plantilla.html
@@ -61,10 +61,7 @@
 
                                 <!-- Display these items only if the user is authenticated and has the role 'USER' -->
                                 <li sec:authorize="isAuthenticated() and hasRole('USER')">
-                                    <a class="dropdown-item" th:href="@{/usuario/gestion}">Gestionar usuario</a>
-                                </li>
-                                <li sec:authorize="isAuthenticated() and hasRole('USER')">
-                                    <a class="dropdown-item" th:href="@{/reparaciones/ver}">Ver reparaciones</a>
+                                    <a class="dropdown-item" th:href="@{/reparaciones/porEmail}">Ver reparaciones</a>
                                 </li>
                                 <li sec:authorize="isAuthenticated() and hasRole('USER')">
                                     <form method="post" th:action="@{/logout}">
@@ -77,7 +74,7 @@
                                     <a class="dropdown-item" th:href="@{/catalogo/gestionar}">Gestionar catalogo</a>
                                 </li>
                                 <li sec:authorize="isAuthenticated() and hasRole('ADMIN')">
-                                    <a class="dropdown-item" th:href="@{/reparaciones/gestionar}">Gestionar reparaciones</a>
+                                    <a class="dropdown-item" th:href="@{/reparaciones/porEmail}">Gestionar reparaciones</a>
                                 </li>
                             </ul>
                         </li>
