--- a/Proyecto/src/main/resources/templates/layout/Plantilla.html
+++ b/Proyecto/src/main/resources/templates/layout/Plantilla.html
@@ -30,19 +30,8 @@
                         <li class="nav-item">
                             <a class="nav-link" th:href="@{/reparaciones/mostrarForm}">Reparaciones</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Catalogo
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" th:href="@{/catalogo/Catalogo}">Videojuegos</a></li>
-                                <li><a class="dropdown-item" href="Catalogo.html">Consolas</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="Catalogo.html">Videojuegos usados</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/catalogo/Catalogo}">Catalogo</a>
                         </li>
                         <!-- User dropdown for login/signup -->
                         <li class="nav-item dropdown me-3">
